--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                                     <strong id="assigned-task">6</strong>
                                 </div>
                             </div>
-                            <div class="flex items-center justify-center  col-span-2 bg-linear-to-tr from-blue-700 to-blue-500
+                            <div id="discover-section" class="flex items-center justify-center  col-span-2 gap-2 bg-linear-to-tr from-blue-700 to-blue-500
                             rounded-lg">
                                 <div class="w-18 p-2">
                                     <img class="w-16" src="./assets/board.png" alt="">
                                 </div>
                                 
-                                <p class="text-white">Discover Something <br> New Today!</p>
+                                <p class="text-white">Discover Something New Today!</p>
                             </div>
                             <div class="flex bg-sky-100 justify-around items-center rounded-lg gap-2">
                                 <div>
