--- a/main.html
+++ b/main.html
@@ -10,25 +10,41 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
      <!-- Font added end -->
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+     <script src="https://cdn.tailwindcss.com"></script>
+     <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                acent:'#3752FD'
+              },
+              fontFamily: {
+                'poppins': ['Poppins', 'sans-serif'], 
+              }
+    
+            }
+          }
+        }
+      </script>
+     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!-- End daisy UI -->
      <!-- font-awesome added -->
      <script src="https://kit.fontawesome.com/f0b60f1cfc.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="font-poppines">
     <header class="bg-transparent">
-        <nav class="font-poppins">
-            <div class="navbar max-w-screen-xl px-20 py-4 mx-auto mt-4  rounded-xl mb-4 bg-white shadow-lg">
-                <div class=" flex items-center gap-2 ml-2 flex-row flex-1">
+        <nav>
+            <div class="navbar max-w-screen-xl flex justify-between  px-20 py-6 mx-auto mt-4  rounded-xl mb-4 bg-white shadow-lg">
+                <div class=" flex items-center gap-2  flex-row flex-1">
                     <div>
                         <img class="w-full h-10" src="./assets/logo.png" alt="">
                     </div>
                   <a class="text-xl font-poppins">Dev<strong class="font-bold">Board</strong></a>
                 </div>
                 <div>
-                    <button  class="bg-blue-700 px-4 py-2 my-2 mx-4 text-lg font-semibold text-white rounded-lg" >
+                    <button id="back-desk-btn"  class="bg-blue-700 px-4 py-2 my-2  text-lg font-semibold text-white rounded-lg" >
                         Back to Desk
                     </button>
                 </div>
@@ -76,5 +92,6 @@
             </div>
         </section>
     </main>
+    <script src="./utilities/backHome.js"></script>
 </body>
 </html>
